Profile Pages for every person

--- a/view_reservation.html
+++ b/view_reservation.html
@@ -56,20 +56,123 @@
           <div class="view_slide">
             <div class="view_slide_top">
                 <a class="pfp" href="profile.html">
-                  <div class="pfp_image">
+                  <div id="abc456" class="pfp_image" >
+                    <p>abc456</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                You made a reservation<br>
+                on June 17 2025 6:48 PM For Laboratory #5<br>
+                Reserving the computers 7,8,9<br>
+                For June 20, 2025 From 10:00 AM to 11:00 AM<br>
+              </div>
+              <div class="reservation_options">
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div class="box">
+                <p>Lab #5 - June 20 - 10:00 to 11:00</p>
+                <div class="computer">
+                  <div class="number">7</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">8</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">9</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <span class="pending">PENDING</span>
+            </div>
+          </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile.html">
+                  <div id="abc456" class="pfp_image">
+                    <p>abc456</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                You made an anonymous reservation<br>
+                On June 17 2025 6:52 PM For Laboratory #5<br>
+                Reserving the computers 10<br>
+                For June 20, 2025 From 10:00 AM to 11:00 AM<br>
+              </div>
+              <div class="reservation_options">
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div class="box">
+                <p>Lab #5 - June 20 - 10:00 to 11:00</p>
+                <div class="computer">
+                  <div class="number">10</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <span class="approved">APPROVED</span>
+            </div>
+          </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile.html">
+                  <div id="BirdUp" class="pfp_image">
+                    <p>@BirdUp</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                You made reservation<br>
+                On June 18 2025 6:48 AM For Laboratory #3<br>
+                Reserving the computers 0,2<br>
+                For June 20, 2025 From 9:00 AM to 4:00 PM<br>
+              </div>
+              <div class="reservation_options">
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div class="box">
+                <p>Lab #3 - June 20 - 09:00 to 16:00</p>
+                <div class="computer">
+                  <div class="number">0</div>
+                  <div class="name"></div>
+                </div>
+                <div class="computer">
+                  <div class="number">2</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <span class="denied">DENIED</span>
+            </div>
+          </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile.html">
+                  <div id="PiiPoo" class="pfp_image" >
                     <p>@PiiPoo</p>
                   </div>
                 </a>
               <div class="reservation_description">
-                @PiiPoo made a reservation<br>
+                You made a reservation<br>
                 on June 17 2025 6:48 PM For Laboratory #5<br>
                 Reserving the computers 1,2,3<br>
                 For June 20, 2025 From 10:00 AM to 11:00 AM<br>
               </div>
               <div class="reservation_options">
                 <a href="edit_reservation.html"><img src="data/wrench.png"></a>
-                <img src="data/check.png">
-                <img src="data/cross.png">
               </div>
             </div>
             <div class="view_slide_bottom">
@@ -97,12 +200,12 @@
           <div class="view_slide">
             <div class="view_slide_top">
                 <a class="pfp" href="profile.html">
-                  <div class="pfp_image">
-                    <p>@DumbName</p>
+                  <div id="PiiPoo" class="pfp_image">
+                    <p>@PiiPoo</p>
                   </div>
                 </a>
               <div class="reservation_description">
-                @Anonymous made a reservation<br>
+                You made an anonymous reservation<br>
                 On June 17 2025 6:52 PM For Laboratory #5<br>
                 Reserving the computers 4<br>
                 For June 20, 2025 From 10:00 AM to 11:00 AM<br>
@@ -128,13 +231,13 @@
           <div class="view_slide">
             <div class="view_slide_top">
                 <a class="pfp" href="profile.html">
-                  <div class="pfp_image">
-                    <p>@DumbName</p>
+                  <div id="PiiPoo" class="pfp_image">
+                    <p>@PiiPoo</p>
                   </div>
                 </a>
               <div class="reservation_description">
-                @Someone made a reservationM<br>
-                On June 18 2025 6:48 AFor Laboratory #3<br>
+                You made reservation<br>
+                On June 18 2025 6:48 AM For Laboratory #3<br>
                 Reserving the computers 6,9<br>
                 For June 20, 2025 From 9:00 AM to 4:00 PM<br>
               </div>
@@ -163,35 +266,64 @@
           <div class="view_slide">
             <div class="view_slide_top">
                 <a class="pfp" href="profile.html">
-                  <div class="pfp_image">
-                    <p>@DumbName</p>
+                  <div id="Someone" class="pfp_image">
+                    <p>Someone</p>
                   </div>
                 </a>
               <div class="reservation_description">
-                @PiiPoomade a reservation<br>
-                On June 17 2025 6:48 PMFor Laboratory #5<br>
-                Reserving the computers 1,2,3<br>
+                You made a reservation<br>
+                On June 17 2025 6:52 PM For Laboratory #2<br>
+                Reserving the computers 35<br>
                 For June 20, 2025 From 10:00 AM to 11:00 AM<br>
               </div>
               <div class="reservation_options">
                 <a href="edit_reservation.html"><img src="data/wrench.png"></a>
-                <img src="data/check.png">
-                <img src="data/cross.png">
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <div class="box">
+                <p>Lab #2 - June 20 - 10:00 to 11:00</p>
+                <div class="computer">
+                  <div class="number">35</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+            <div class="view_slide_bottom">
+              <span class="approved">APPROVED</span>
+            </div>
+          </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile.html">
+                  <div id="xyz123" class="pfp_image" >
+                    <p>@xyz123</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                You made a reservation<br>
+                on June 17 2025 6:48 PM For Laboratory #5<br>
+                Reserving the computers 11,12,13<br>
+                For June 20, 2025 From 10:00 AM to 11:00 AM<br>
+              </div>
+              <div class="reservation_options">
+                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
               </div>
             </div>
             <div class="view_slide_bottom">
               <div class="box">
                 <p>Lab #5 - June 20 - 10:00 to 11:00</p>
                 <div class="computer">
-                  <div class="number">1</div>
+                  <div class="number">11</div>
                   <div class="name"></div>
                 </div>
                 <div class="computer">
-                  <div class="number">2</div>
+                  <div class="number">12</div>
                   <div class="name"></div>
                 </div>
                 <div class="computer">
-                  <div class="number">3</div>
+                  <div class="number">13</div>
                   <div class="name"></div>
                 </div>
               </div>
@@ -204,82 +336,31 @@
           <div class="view_slide">
             <div class="view_slide_top">
                 <a class="pfp" href="profile.html">
-                  <div class="pfp_image">
-                    <p>@DumbName</p>
+                  <div id="xyz123" class="pfp_image">
+                    <p>@xyz123</p>
                   </div>
                 </a>
               <div class="reservation_description">
-                @PiiPoomade a reservation<br>
-                On June 17 2025 6:48 PMFor Laboratory #5<br>
-                Reserving the computers 1,2,3<br>
+                You made an anonymous reservation<br>
+                On June 17 2025 6:52 PM For Laboratory #5<br>
+                Reserving the computers 14<br>
                 For June 20, 2025 From 10:00 AM to 11:00 AM<br>
               </div>
               <div class="reservation_options">
                 <a href="edit_reservation.html"><img src="data/wrench.png"></a>
-                <img src="data/check.png">
-                <img src="data/cross.png">
               </div>
             </div>
             <div class="view_slide_bottom">
               <div class="box">
                 <p>Lab #5 - June 20 - 10:00 to 11:00</p>
                 <div class="computer">
-                  <div class="number">1</div>
-                  <div class="name"></div>
-                </div>
-                <div class="computer">
-                  <div class="number">2</div>
-                  <div class="name"></div>
-                </div>
-                <div class="computer">
-                  <div class="number">3</div>
+                  <div class="number">14</div>
                   <div class="name"></div>
                 </div>
               </div>
             </div>
             <div class="view_slide_bottom">
-              <span class="pending">PENDING</span>
-            </div>
-          </div>
-
-          <div class="view_slide">
-            <div class="view_slide_top">
-                <a class="pfp" href="profile.html">
-                  <div class="pfp_image">
-                    <p>@DumbName</p>
-                  </div>
-                </a>
-              <div class="reservation_description">
-                @PiiPoomade a reservation<br>
-                On June 17 2025 6:48 PM For Laboratory #5<br>
-                Reserving the computers 1,2,3<br>
-                For June 20, 2025 From 10:00 AM to 11:00 AM<br>
-              </div>
-              <div class="reservation_options">
-                <a href="edit_reservation.html"><img src="data/wrench.png"></a>
-                <img src="data/check.png">
-                <img src="data/cross.png">
-              </div>
-            </div>
-            <div class="view_slide_bottom">
-              <div class="box">
-                <p>Lab #5 - June 20 - 10:00 to 11:00</p>
-                <div class="computer">
-                  <div class="number">1</div>
-                  <div class="name"></div>
-                </div>
-                <div class="computer">
-                  <div class="number">2</div>
-                  <div class="name"></div>
-                </div>
-                <div class="computer">
-                  <div class="number">3</div>
-                  <div class="name"></div>
-                </div>
-              </div>
-            </div>
-            <div class="view_slide_bottom">
-              <span class="pending">PENDING</span>
+              <span class="approved">APPROVED</span>
             </div>
           </div>
 
