--- a/edit_reservation.html
+++ b/edit_reservation.html
@@ -23,10 +23,10 @@
   <div class="links">
     <div class="left-tab">
       <nav>
-        <div id="currentlyhere">
+        <div>
           <a href="index.html">Home</a>
         </div>
-        <div>
+        <div  id="currentlyhere">
           <a href="create_reservation.html">Create Reservation</a>
         </div>
         <div>
@@ -51,10 +51,206 @@
     </div>
 
     <div class="table">
-      <h2>Edit Reservations here</h2>
+      <h2>Editing Reservation</h2>
+      Date: <input type="date" value="2025-06-20"><br>  
+      <label for="start_time">Start Time:</label>
+      <select name="start_time" id="start_time">
+        <option value="0900">9:00 AM</option>
+        <option value="0930">9:30 AM</option>
+        <option value="1000" selected>10:00 AM</option>
+        <option value="1030">10:30 AM</option>
+        <option value="1100">11:00 AM</option>
+        <option value="1130">11:30 AM</option>
+        <option value="1200">12:00 PM</option>
+        <option value="1230">12:30 PM</option>
+        <option value="1300">01:00 PM</option>
+        <option value="1330">01:30 PM</option>
+        <option value="1400">02:00 PM</option>
+        <option value="1430">02:30 PM</option>
+        <option value="1500">03:00 PM</option>
+        <option value="1530">03:30 PM</option>
+        <option value="1600">04:00 PM</option>
+      </select>  
+      <label for="start_time">   End Time:</label>
+      <select name="start_time" id="start_time">
+        <option value="0900">9:00 AM</option>
+        <option value="0930">9:30 AM</option>
+        <option value="1000">10:00 AM</option>
+        <option value="1030">10:30 AM</option>
+        <option value="1100" selected>11:00 AM</option>
+        <option value="1130">11:30 AM</option>
+        <option value="1200">12:00 PM</option>
+        <option value="1230">12:30 PM</option>
+        <option value="1300">01:00 PM</option>
+        <option value="1330">01:30 PM</option>
+        <option value="1400">02:00 PM</option>
+        <option value="1430">02:30 PM</option>
+        <option value="1500">03:00 PM</option>
+        <option value="1530">03:30 PM</option>
+        <option value="1600">04:00 PM</option>
+      </select> 
+      <br><br>    <!-- added breakline -->
+      <label><input type="radio" name="lab" value="1"> Lab 1</label>
+      <label><input type="radio" name="lab" value="2"> Lab 2</label>
+      <label><input type="radio" name="lab" value="3" checked> Lab 3</label>
+      <label><input type="radio" name="lab" value="4"> Lab 4</label>
+      <label><input type="radio" name="lab" value="5"> Lab 5</label>
+      <br><br>
+
+      <label><input type="checkbox" name="anon" value="1" checked>      Are you reserving anonymously? </label>
+      <div class="box">
+          <div class="computer">
+            <div class="number">1</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">2</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">3</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">4</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">5</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">6</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">7</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">8</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">9</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">10</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">11</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">12</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">13</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">14</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">15</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">16</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">17</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">18</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">19</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">20</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">21</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">22</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">23</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">24</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">25</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">26</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">27</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">28</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">29</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">30</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">31</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">32</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">33</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">34</div>
+            <div class="name"></div>
+          </div>
+          <div class="computer">
+            <div class="number">35</div>
+            <div class="name"></div>
+          </div>
+
+
+
+
+      </div>
+
+      <div class="box-buttons">
+        <button id="Delete" type="button">Delete</button>
+        <button id="Clear" type="button">Clear</button>
+        <button id="reserve-button" type="button">Reserve</button>
+      </div>
     </div>
-
-
 
   </div>
 </body>
