--- a/profile.html
+++ b/profile.html
@@ -24,26 +24,30 @@
   <div class="links">
     <div class="left-tab">
       <nav>
-        <div>
+        <div id="currentlyhere">
           <a href="index.html">Home</a>
         </div>
         <div>
           <a href="create_reservation.html">Create Reservation</a>
         </div>
         <div>
-          <a href="edit_reservation.html">Edit Reservations</a>
+          <a href="view_reservation.html">View Reservations</a>
         </div>
-        <div id="currentlyhere">
+        <div>
           <a href="profile.html">View Profile</a>
         </div>
         <div>
           <a href="search_profile.html">Search Profiles</a>
         </div>
         <div>
-           <a href="login.html" id="auth-link">Login</a>
+          <a href="login.html" id="auth-link">Login</a>
         </div>
         <div>
           <a href="register.html">Register</a>
+        </div>
+        <div>
+          <a href="logout.html"">Logout</a>
+        </div>
       </nav>
     </div>
 
@@ -51,15 +55,17 @@
       
       <div class="bio">
         <div class="header">
-          <h2>User Profile</h2>
+          <h2>@PiiPoo</h2>
           <button class="edit">Edit Profile</button>
         </div>
         
-        <img class="profile-pic" src="data/default-pfp.png">
-        <h3>Last Name, First Name</h3>
-        <h4>Id number goes here</h4>
+        <img class="profile-pic" src="data/PiiPoo.png">
+        <h3>Aglugub, Jerome Andrei C.</h3>
+        <h4>12276014</h4>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero et, ut minus blanditiis omnis non soluta quaerat labore incidunt vitae commodi veritatis molestias sapiente magnam. Magnam unde dolore labore necessitatibus.
+          Do Not Test Me <br><br>
+
+          Account Made on May 02, 2003
         </p>
       </div>
       <div class="view-tab">
@@ -70,8 +76,8 @@
         <div class="view_slide">
             <div class="view_slide_top">
                 <a class="pfp" href="profile.html">
-                  <div class="pfp_image">
-                    <p>@DumbName</p>
+                  <div id="PiiPoo" class="pfp_image" >
+                    <p>@PiiPoo</p>
                   </div>
                 </a>
               <div class="reservation_description">
@@ -109,8 +115,8 @@
           <div class="view_slide">
             <div class="view_slide_top">
                 <a class="pfp" href="profile.html">
-                  <div class="pfp_image">
-                    <p>@DumbName</p>
+                  <div id="PiiPoo" class="pfp_image">
+                    <p>@PiiPoo</p>
                   </div>
                 </a>
               <div class="reservation_description">
@@ -140,8 +146,8 @@
           <div class="view_slide">
             <div class="view_slide_top">
                 <a class="pfp" href="profile.html">
-                  <div class="pfp_image">
-                    <p>@DumbName</p>
+                  <div id="PiiPoo" class="pfp_image">
+                    <p>@PiiPoo</p>
                   </div>
                 </a>
               <div class="reservation_description">
