--- a/profile_xyz123.html
+++ b/profile_xyz123.html
@@ -24,7 +24,7 @@
   <div class="links">
     <div class="left-tab">
       <nav>
-        <div id="currentlyhere">
+        <div>
           <a href="index.html">Home</a>
         </div>
         <div>
