edited profile texts

--- a/profile_mansukhani.html
+++ b/profile_mansukhani.html
@@ -61,11 +61,11 @@
         <img class="profile-pic" src="data/BirdUp.png">
         <h3>Mansukhani, Asan Ro</h3>
         <h4>13333334</h4>
-        <p>
-          Hawk Tuah <br><br>
-
-          Account Made on Feb 29, 2012
-        </p>
+       <div>
+          <p>pronouns: He/Him</p>
+          <p>Contact: 094532176</p></br>
+          <p>Account Made on February 05, 2013</p>
+        </div>
       </div>
       <div class="view-tab">
         <div class="header">
