--- a/search_profile.html
+++ b/search_profile.html
@@ -8,7 +8,7 @@
   <title>Lab Reservation System</title>
   <link rel="stylesheet" href="css/main_style.css" />
   <link rel="stylesheet" href="css/index copy.css" />
-  <script src="js/script.js" defer></script>
+  <link rel="stylesheet" href="css/box.css" />
 
 </head>
 
@@ -28,25 +28,68 @@
         <div>
           <a href="create_reservation.html">Create Reservation</a>
         </div>
-        <div>
-          <a href="edit_reservation.html">Edit Reservations</a>
+        <div id="currentlyhere">
+          <a href="view_reservation.html">View Reservations</a>
         </div>
         <div>
           <a href="profile.html">View Profile</a>
         </div>
-        <div id="currentlyhere">
+        <div>
           <a href="search_profile.html">Search Profiles</a>
         </div>
         <div>
-           <a href="login.html" id="auth-link">Login</a>
+          <a href="login.html" id="auth-link">Login</a>
         </div>
         <div>
           <a href="register.html">Register</a>
+        </div>
       </nav>
     </div>
 
     <div class="table">
-      <h2>Edit Reservations here</h2>
+      <h2>Hello Admins!<br>Viewing Users</h2>
+
+      <label for="sortby">Sort By:</label>
+      <select name="sortby" id="sortby">
+        <option>User Name</option>
+        <option>Last Name</option>
+        <option>Student ID</option>
+        <option>Date Created</option>
+      </select>  
+      <select name="asc" id="asc">
+        <option>Ascending</option>
+        <option>Descending</option>
+      </select> 
+      <br><br>
+      Looking for:<br>
+      <label for="name">Username: </label>
+      <input name="name" type="text"><br>
+      <label for="name">Name: </label>
+      <input name="name" type="text"><br>
+      <label for="name">Student ID </label>
+      <input name="name" type="text"><br>
+      
+      <hr>
+      
+      <div class="box" id="view_box">
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile_abc456.html">
+                  <div id="abc456" class="pfp_image" >
+                    <p>abc456</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                @abc456<br>
+                Marinas, Carl.<br>
+                Account Made on February 05, 2013<br><br>
+                Abacus for life
+              </div>
+            </div>
+          </div>
+
+      </div>
     </div>
 
 
