removed profile pfp and changed everything to profile_aglugub.html

--- a/profile_aglugub.html
+++ b/profile_aglugub.html
@@ -56,7 +56,7 @@
 
         </div>
 
-        <img class="profile-pic" src="data/PiiPoo.png">
+        <img class="profile-pic" src="data/default-pfp.png">
         <h3>Aglugub, Jerome Andrei C.</h3>
         <h4>12276014</h4>
         <div>
@@ -72,7 +72,7 @@
 
         <div class="view_slide">
           <div class="view_slide_top">
-            <a class="pfp" href="profile.html">
+            <a class="pfp" href="profile_aglugub.html">
               <div id="PiiPoo" class="pfp_image">
                 <p>@PiiPoo</p>
               </div>
@@ -108,7 +108,7 @@
 
         <div class="view_slide">
           <div class="view_slide_top">
-            <a class="pfp" href="profile.html">
+            <a class="pfp" href="profile_aglugub.html">
               <div id="PiiPoo" class="pfp_image">
                 <p>@PiiPoo</p>
               </div>
@@ -136,7 +136,7 @@
 
         <div class="view_slide">
           <div class="view_slide_top">
-            <a class="pfp" href="profile.html">
+            <a class="pfp" href="profile_aglugub.html">
               <div id="PiiPoo" class="pfp_image">
                 <p>@PiiPoo</p>
               </div>
