--- a/profile_barbaso.html
+++ b/profile_barbaso.html
@@ -55,7 +55,7 @@
           <h2>@abc456</h2>
         </div>
         
-        <img class="profile-pic" src="data/Someone.png">
+        <img class="profile-pic" src="data/default-pfp.png">
         <h3>Barbaso, Dean.</h3>
         <h4>11312211</h4>
           <div>
@@ -71,7 +71,7 @@
 
           <div class="view_slide">
             <div class="view_slide_top">
-                <a class="pfp" href="profile.html">
+                <a class="pfp" href="profile_aglugub.html">
                   <div id="Someone" class="pfp_image">
                     <p>Someone</p>
                   </div>
