--- a/profile_mansukhani.html
+++ b/profile_mansukhani.html
@@ -55,7 +55,7 @@
           <h2>@BirdUp</h2>
         </div>
         
-        <img class="profile-pic" src="data/BirdUp.png">
+        <img class="profile-pic" src="data/default-pfp.png">
         <h3>Mansukhani, Asan Ro</h3>
         <h4>13333334</h4>
        <div>
@@ -71,7 +71,7 @@
 
           <div class="view_slide">
             <div class="view_slide_top">
-                <a class="pfp" href="profile.html">
+                <a class="pfp" href="profile_aglugub.html">
                   <div id="BirdUp" class="pfp_image">
                     <p>@BirdUp</p>
                   </div>
