--- a/profile_marinas.html
+++ b/profile_marinas.html
@@ -55,7 +55,7 @@
           <h2>@abc456</h2>
         </div>
 
-        <img class="profile-pic" src="data/abc456.png">
+        <img class="profile-pic" src="data/default-pfp.png">
         <h3>Marinas, Carl.</h3>
         <h4>11376431</h4>
         <div>
@@ -71,7 +71,7 @@
 
         <div class="view_slide">
           <div class="view_slide_top">
-            <a class="pfp" href="profile.html">
+            <a class="pfp" href="profile_aglugub.html">
               <div id="abc456" class="pfp_image">
                 <p>abc456</p>
               </div>
@@ -107,7 +107,7 @@
 
         <div class="view_slide">
           <div class="view_slide_top">
-            <a class="pfp" href="profile.html">
+            <a class="pfp" href="profile_aglugub.html">
               <div id="abc456" class="pfp_image">
                 <p>abc456</p>
               </div>
