--- a/profile_yohan.html
+++ b/profile_yohan.html
@@ -55,7 +55,7 @@
           <h2>@xyz123</h2>
         </div>
         
-        <img class="profile-pic" src="data/xyz123.png">
+        <img class="profile-pic" src="data/default-pfp.png">
         <h3>Yohan, Ko</h3>
         <h4>11111114</h4>
           <div>
@@ -71,7 +71,7 @@
 
         <div class="view_slide">
             <div class="view_slide_top">
-                <a class="pfp" href="profile.html">
+                <a class="pfp" href="profile_aglugub.html">
                   <div id="xyz123" class="pfp_image" >
                     <p>@xyz123</p>
                   </div>
@@ -107,7 +107,7 @@
 
           <div class="view_slide">
             <div class="view_slide_top">
-                <a class="pfp" href="profile.html">
+                <a class="pfp" href="profile_aglugub.html">
                   <div id="xyz123" class="pfp_image">
                     <p>@xyz123</p>
                   </div>
