added all 5 hard coded guys in the search

--- a/profile_aglugub.html
+++ b/profile_aglugub.html
@@ -34,7 +34,7 @@
           <a href="view_reservation.html">View Reservations</a>
         </div>
         <div>
-          <a href="profile.html">View Profile</a>
+          <a href="profile_aglugub.html">View Profile</a>
         </div>
         <div>
           <a href="search_profile.html">Search Profiles</a>
