--- a/search_profile.html
+++ b/search_profile.html
@@ -75,9 +75,57 @@
 
           <div class="view_slide">
             <div class="view_slide_top">
-                <a class="pfp" href="profile_abc456.html">
+                <a class="pfp" href="profile_aglugub.html">
                   <div id="abc456" class="pfp_image" >
-                    <p>abc456</p>
+                    <p>aglugub</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                @abc456<br>
+                aglugub, Jerome.<br>
+                Account Made on February 05, 2013<br><br>
+                Abacus for life
+              </div>
+            </div>
+          </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile_barbaso.html">
+                  <div id="PiiPoo" class="pfp_image" >
+                    <p>barbaso</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                @abc456<br>
+                barbaso, Dean.<br>
+                Account Made on February 05, 2013<br><br>
+                Abacus for life
+              </div>
+            </div>
+          </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile_barbaso.html">
+                  <div id="PiiPoo" class="pfp_image" >
+                    <p>mansukhani</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                @abc456<br>
+                mansukhani, asanro.<br>
+                Account Made on February 05, 2013<br><br>
+                Abacus for life
+              </div>
+            </div>
+          </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile_barbaso.html">
+                  <div id="PiiPoo" class="pfp_image" >
+                    <p>Marinas</p>
                   </div>
                 </a>
               <div class="reservation_description">
@@ -88,6 +136,24 @@
               </div>
             </div>
           </div>
+
+          <div class="view_slide">
+            <div class="view_slide_top">
+                <a class="pfp" href="profile_barbaso.html">
+                  <div id="PiiPoo" class="pfp_image" >
+                    <p>Ko</p>
+                  </div>
+                </a>
+              <div class="reservation_description">
+                @yokonut<br>
+                Ko, Yohan.<br>
+                Account Made on February 05, 2013<br><br>
+                Abacus for life
+              </div>
+            </div>
+          </div>
+
+          
 
       </div>
     </div>
