Minor adjustments with some id's and added include script for one page

--- a/profile_aglugub.html
+++ b/profile_aglugub.html
@@ -33,7 +33,7 @@
         <div>
           <a href="view_reservation.html">View Reservations</a>
         </div>
-        <div>
+        <div id="currentlyhere">
           <a href="profile_aglugub.html">View Profile</a>
         </div>
         <div>
