--- a/search_profile.html
+++ b/search_profile.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/main_style.css" />
   <link rel="stylesheet" href="css/index copy.css" />
   <link rel="stylesheet" href="css/box.css" />
+  <script src="js/script.js" defer></script>
 
 </head>
 
@@ -28,13 +29,13 @@
         <div>
           <a href="create_reservation.html">Create Reservation</a>
         </div>
-        <div id="currentlyhere">
+        <div>
           <a href="view_reservation.html">View Reservations</a>
         </div>
         <div>
           <a href="profile_aglugub.html">View Profile</a>
         </div>
-        <div>
+        <div id="currentlyhere">
           <a href="search_profile.html">Search Profiles</a>
         </div>
         <div>
