--- a/profile_yohan.html
+++ b/profile_yohan.html
@@ -33,7 +33,7 @@
         <div>
           <a href="view_reservation.html">View Reservations</a>
         </div>
-        <div>
+        <div id="currentlyhere">
           <a href="profile.html">View Profile</a>
         </div>
         <div>
