changed back pictures

--- a/profile_aglugub.html
+++ b/profile_aglugub.html
@@ -56,7 +56,7 @@
 
         </div>
 
-        <img class="profile-pic" src="data/default-pfp.png">
+        <img class="profile-pic" src="data/PiiPoo.png">
         <h3>Aglugub, Jerome Andrei C.</h3>
         <h4>12276014</h4>
         <div>
