--- a/profile_mansukhani.html
+++ b/profile_mansukhani.html
@@ -55,7 +55,7 @@
           <h2>@BirdUp</h2>
         </div>
         
-        <img class="profile-pic" src="data/default-pfp.png">
+        <img class="profile-pic" src="data/BirdUp.png">
         <h3>Mansukhani, Asan Ro</h3>
         <h4>13333334</h4>
        <div>
