--- a/profile_marinas.html
+++ b/profile_marinas.html
@@ -55,7 +55,7 @@
           <h2>@abc456</h2>
         </div>
 
-        <img class="profile-pic" src="data/default-pfp.png">
+        <img class="profile-pic" src="data/abc456.png">
         <h3>Marinas, Carl.</h3>
         <h4>11376431</h4>
         <div>
