--- a/profile_yohan.html
+++ b/profile_yohan.html
@@ -55,7 +55,7 @@
           <h2>@xyz123</h2>
         </div>
         
-        <img class="profile-pic" src="data/default-pfp.png">
+        <img class="profile-pic" src="data/xyz123.png">
         <h3>Yohan, Ko</h3>
         <h4>11111114</h4>
           <div>
