--- a/profile_barbaso.html
+++ b/profile_barbaso.html
@@ -55,7 +55,7 @@
           <h2>@abc456</h2>
         </div>
         
-        <img class="profile-pic" src="data/default-pfp.png">
+        <img class="profile-pic" src="data/Someone.png">
         <h3>Barbaso, Dean.</h3>
         <h4>11312211</h4>
           <div>
