--- a/search_profile.html
+++ b/search_profile.html
@@ -86,7 +86,7 @@
         <div class="view_slide">
           <div class="view_slide_top">
             <a class="pfp" href="profile_aglugub.html">
-              <div id="abc456" class="pfp_image">
+              <div id="PiiPoo" class="pfp_image">
                 <p>aglugub</p>
               </div>
             </a>
@@ -102,7 +102,7 @@
         <div class="view_slide">
           <div class="view_slide_top">
             <a class="pfp" href="profile_barbaso.html">
-              <div id="PiiPoo" class="pfp_image">
+              <div id="Someone" class="pfp_image">
                 <p>barbaso</p>
               </div>
             </a>
@@ -117,8 +117,8 @@
 
         <div class="view_slide">
           <div class="view_slide_top">
-            <a class="pfp" href="profile_barbaso.html">
-              <div id="PiiPoo" class="pfp_image">
+            <a class="pfp" href="profile_mansukhani.html">
+              <div id="BirdUp" class="pfp_image">
                 <p>mansukhani</p>
               </div>
             </a>
@@ -133,8 +133,8 @@
 
         <div class="view_slide">
           <div class="view_slide_top">
-            <a class="pfp" href="profile_barbaso.html">
-              <div id="PiiPoo" class="pfp_image">
+            <a class="pfp" href="profile_marinas.html">
+              <div id="abc456" class="pfp_image">
                 <p>Marinas</p>
               </div>
             </a>
@@ -149,8 +149,8 @@
 
         <div class="view_slide">
           <div class="view_slide_top">
-            <a class="pfp" href="profile_barbaso.html">
-              <div id="PiiPoo" class="pfp_image">
+            <a class="pfp" href="profile_yohan.html">
+              <div id="xyz123" class="pfp_image">
                 <p>Ko</p>
               </div>
             </a>
