--- a/profile_barbaso.html
+++ b/profile_barbaso.html
@@ -34,7 +34,7 @@
           <a href="view_reservation.html">View Reservations</a>
         </div>
         <div id="currentlyhere">
-          <a href="profile.html">View Profile</a>
+          <a href="profile_barbaso.html">View Profile</a>
         </div>
         <div>
           <a href="search_profile.html">Search Profiles</a>
@@ -71,7 +71,7 @@
 
           <div class="view_slide">
             <div class="view_slide_top">
-                <a class="pfp" href="profile_aglugub.html">
+                <a class="pfp" href="profile_barbaso.html">
                   <div id="Someone" class="pfp_image">
                     <p>Someone</p>
                   </div>
