--- a/profile_marinas.html
+++ b/profile_marinas.html
@@ -34,7 +34,7 @@
           <a href="view_reservation.html">View Reservations</a>
         </div>
         <div id="currentlyhere">
-          <a href="profile.html">View Profile</a>
+          <a href="profile_marinas.html">View Profile</a>
         </div>
         <div>
           <a href="search_profile.html">Search Profiles</a>
@@ -71,7 +71,7 @@
 
         <div class="view_slide">
           <div class="view_slide_top">
-            <a class="pfp" href="profile_aglugub.html">
+            <a class="pfp" href="profile_marinas.html">
               <div id="abc456" class="pfp_image">
                 <p>abc456</p>
               </div>
